--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -25,6 +25,8 @@
 	- TTS
 	- Log
 	- File?
+- "Not user" filter
+- Fix: single-time GIFs not starting over when shown again
 - User data editor: raw (use shell to open Notepad for data files).
 - User data editor: built-in, data-specific interface that allows visual
   editing of the data (each module will need to define these editors for
