--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -4,13 +4,14 @@
   information about the commands along with the callbacks for them. Then
   I'll link command registration to configuration loading.
 + UI for changing the configuration during runtime.
-- Configuration backup system
++ Configuration backup system
 - Support for user data files for modules (for large data that shouldn't
   be in the configurations themselves).
 - Switch to function-trigger based configuration form.
   Trigger ideas:
 	- Command (with filters)
 	- Keywords (+ filters, regex)
+	- Twitch events (message, action, etc.)
 	- Key shortcut
 	- Key down/up
 	- Controller buttons
@@ -27,6 +28,7 @@
 	- TTS
 	- Log
 	- File?
+- Trigger variants
 - "Not user" filter
 - Fix: single-time GIFs not starting over when shown again
 - User data editor: raw (use shell to open Notepad for data files).
@@ -36,6 +38,9 @@
 - Persistent data for modules
 - OBS Websocket module
 - Voice activation mechanism (in addition to commands and shortcut keys)
+
+- NPM Uninstall image-size if I no longer use it
+
 
 
 
