--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -5,6 +5,7 @@
   I'll link command registration to configuration loading.
 + UI for changing the configuration during runtime.
 + Configuration backup system
+- Disable tab index on labels in GUI
 - Support for user data files for modules (for large data that shouldn't
   be in the configurations themselves).
 - Switch to function-trigger based configuration form.
@@ -51,8 +52,9 @@ IDEAS!
 
 
 Next:
-- Filters
++ Filters
 - Variables, help display, auto-complete variable names
+	- Make help text not close if focusing on that
 - Switch everything to work with functions
 - Phase out old code (commands, shortcuts, user filters if I do something completely different)
 - Add more triggers and responses (see list above)
