Made labels unfocusable and unselectable.
Had to sacrifice the tooltips on them for it.
You will be remembered. o7

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -15,6 +15,7 @@
 - Duration still in milliseconds in image functions
 - Module descriptions
 - Changes marked in previously-accepted modules on any change
+- GUI: Hitting Enter should switch to next field
 
 GUI User Feedback:
 - Lables should be unmarkable, cursor should stay a pointer
