Fixed function response help text in GUI.
Now it always shows information for all the variables available based on module, function, trigger and global variables.

TODO at some point: revamp the whole configuration thing...
It creates thousands of configuration entities, which is way more than I expected. The single configuration file for Candy Game had about 200 descriptors when I looked, which is also overkill - and that's without any images even.
I need to scrap the whole thing and make something leaner. =\

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -18,6 +18,7 @@
 - GUI: Hitting Enter should switch to next field
 - Video assets
 - Meme command that shows a random meme
+- Testing =\
 
 GUI User Feedback:
 + Lables should be unmarkable, cursor should stay a pointer
