OBS Control: Fixed new settings not being applied, added connection timer.
It will now attempt to connect to OBS every 5 seconds while it's not connected (only if the module is enabled).

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -21,6 +21,7 @@
 - Testing =\
 - Revamp configs to lessen descriptor count =\
 - Remake configuration GUI x_x
+- "status" CLI command that shows current connection status to everything
 
 GUI User Feedback:
 + Lables should be unmarkable, cursor should stay a pointer
